Update and rename FLOWERS AND COLOURS.html to index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		</td>
 		<td>
-			<a href="https://mohmohthanster.github.io/Flowers-and-Colours/p.html"><img src="./FLOWERS AND COLOURS_files/p.jpg" height="200" width="300"></a>
+			<a href="https://mohmohthanster.github.io/Flowers-and-Colours/p.html"><img src="ctf.jpg" height="200" width="300"></a>
 		</td>
 	</tr>
 	<tr>
