--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
 		</td>
 		<td>
-			<a href="https://mohmohthanster.github.io/Flowers-and-Colours/p.html"><img src="ctf.jpg" height="200" width="300"></a>
+			<a href="https:/PhyoThukhaKyaw.github.io/Flowers-and-Colours/p.html"><img src="ctf.jpg" height="200" width="300"></a>
 		</td>
 	</tr>
 	<tr>
 		<td>
-			<p style="text-align: right;"><a href="https://mohmohthanster.github.io/Flowers-and-Colours/y.html"><img src="./FLOWERS AND COLOURS_files/y.jpg" height="200" width="300"></a>
+			<p style="text-align: right;"><a href="https://PhyoThukhaKyaw.github.io/Flowers-and-Colours/y.html"><img src="./FLOWERS AND COLOURS_files/y.jpg" height="200" width="300"></a>
 		</p></td>
 		<td style="background: yellow;">
 			<h1 style="color: white;">Yellow</h1>
@@ -40,7 +40,7 @@
 			<p style="text-indent: 50px">Click the blue flowers image to read more...</p>
 		</td>
 		<td>
-			<a href="https://mohmohthanster.github.io/Flowers-and-Colours/b.html"><img src="./FLOWERS AND COLOURS_files/b.jpg" height="200" width="300"></a>
+			<a href="https://PhyoThukhaKyaw.github.io/Flowers-and-Colours/b.html"><img src="./FLOWERS AND COLOURS_files/b.jpg" height="200" width="300"></a>
 		</td>
 	</tr>
 </tbody>
